Adicionado popup regras

--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
         </div>
       </div>
       <div class="main">
+        <div class="botoes main">
+          <button id="paper" class="power paper" value="paper">
+            <img src="./images/icon-paper.svg" alt="Paper" />
+          </button>
+
+          <button id="scissors" class="power scissors" value="scissors">
+            <img src="./images/icon-scissors.svg" alt="Scissors" />
+          </button>
+        </div>
         <button id="rock" class="power rock" value="rock">
           <img src="./images/icon-rock.svg" alt="Rock" />
-        </button>
-
-        <button id="paper" class="power paper" value="paper">
-          <img src="./images/icon-paper.svg" alt="Paper" />
-        </button>
-
-        <button id="scissors" class="power scissors" value="scissors">
-          <img src="./images/icon-scissors.svg" alt="Scissors" />
         </button>
 
         <div class="reta">
@@ -57,7 +58,7 @@
         </div>
       </div>
       <div class="rules">
-        <a href="#">Rules</a>
+        <a href="" onclick="popupRules()">Rules</a>
       </div>
     </div>
 
