Adicionado resultado na tela.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <div class="interna"></div>
         </div>
       </div>
+      <div id="result-roll"></div>
       <div class="rules">
         <a href="" onclick="popupRules()">Rules</a>
       </div>
